Fixed paragraph spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -266,4 +266,7 @@ label {
   .overlay p {
     width: 50%;
   }
+  p {
+    width: 100%;
+  }
 }
